# livequery

./: .env.example  .gitignore  Cargo.toml  LICENSE  Makefile  README.md  docker-compose.yml  pg_subscribe.control
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml  release.yml
benches/: perf.rs
docker/: .gitignore  Dockerfile  Dockerfile.demo  demo-start.sh  docker-compose.yml  init.sql  nats.conf  nginx.conf
docker/data/: .gitkeep
docker/frontend/: index.html
docker/sql-api/: package-lock.json  package.json  server.js
docs/: index.html
examples/: nodejs_client.js  python_client.py  setup_test_db.sql
scripts/: test_db.rs  test_queries.rs  test_schema.sql
sql/: pg_subscribe--0.1.0.sql
src/: event.rs  lib.rs  main.rs  query_analyzer.rs  query_dedup.rs  shmem.rs  streaming.rs  trigger.rs  types.rs  unified_subscribe.rs
src/core/: config.rs  event.rs  mod.rs  query.rs  row.rs  subscription.rs
src/infra/: db.rs  mod.rs  nats.rs  pgoutput.rs  wal_stream.rs
src/telemetry/: mod.rs
tests/: integration_test.rs  integration_test.sql  query_test.rs  subscription_test.rs  test_modern.py  test_reactive_changes.py
