[package]
name = "pg_subscribe"
version = "0.1.0"
edition = "2021"
description = "PostgreSQL extension for reactive SUBSCRIBE protocol with IVM support"
license = "MIT"

[lib]
crate-type = ["cdylib", "lib"]

[[bin]]
name = "pgrx_embed_pg_subscribe"
path = "src/bin/pgrx_embed.rs"

[features]
default = ["pg16"]
pg13 = ["pgrx/pg13", "pgrx-tests/pg13"]
pg14 = ["pgrx/pg14", "pgrx-tests/pg14"]
pg15 = ["pgrx/pg15", "pgrx-tests/pg15"]
pg16 = ["pgrx/pg16", "pgrx-tests/pg16"]
pg17 = ["pgrx/pg17", "pgrx-tests/pg17"]
pg_test = []

[dependencies]
pgrx = "0.12.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
parking_lot = "0.12"
crossbeam-channel = "0.5"
heapless = "0.8"  # Fixed-size collections for shared memory
sqlparser = "0.52"  # SQL AST parser with PostgreSQL dialect support

[dev-dependencies]
pgrx-tests = "0.12.6"

[profile.dev]
panic = "unwind"
lto = "thin"

[profile.release]
panic = "unwind"
opt-level = 3
lto = "fat"
codegen-units = 1
