[package]
name = "livequery-server"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "livequery-server"
path = "src/main.rs"

[[bin]]
name = "test-queries"
path = "scripts/test_queries.rs"

[[bin]]
name = "test-db"
path = "scripts/test_db.rs"

[dependencies]
# Async
tokio = { version = "1.49", features = ["rt-multi-thread", "macros", "signal", "time"] }
futures = "0.3"

# PostgreSQL
tokio-postgres = { version = "0.7", features = ["with-serde_json-1", "with-uuid-1", "with-chrono-0_4"] }
deadpool-postgres = "0.14"
pgwire-replication = "0.1"

# NATS
async-nats = "0.46"
bytes = "1"

# SQL parsing
sqlparser = "0.60"

# Serialization
serde = { version = "1.0", features = ["derive", "rc"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.20", features = ["v4", "serde"] }

# Fast data structures
dashmap = "6"
rustc-hash = "2"
parking_lot = "0.12"
itoa = "1"
memchr = "2"

# URL parsing
url = "2"

# Utils
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
dotenvy = "0.15"
smallvec = "1.15"

[dev-dependencies]
criterion = { version = "0.6", features = ["html_reports"] }

[[bench]]
name = "perf"
harness = false

[profile.dev]
opt-level = 1

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
strip = true

[profile.bench]
opt-level = 3
lto = "thin"


